// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With React Testing Library renders correctly with movie 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-q3edm8-MuiPaper-root"
>
  <span
    className="logo-text"
  >
    netflixroulette
  </span>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <button
        className="MuiButtonBase-root css-14rlyms-MuiButtonBase-root"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <img
          alt="complex"
          className="movie-img"
          src="https://image.tmdb.org/t/p/w500/3kcEGnYBHDeqmdYf8ZRbKdfmlUy.jpg"
        />
        <span
          className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-undefined MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-19gf1bx-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-true css-1x3r9m2-MuiGrid-root"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-13recvd-MuiGrid-root"
        >
          <div
            style={
              Object {
                "display": "inline-flex",
                "marginLeft": 40,
              }
            }
          >
            <span
              className="movie-info-header"
            >
              Fifty Shades Freed
            </span>
            <div
              className="movie-info-rating"
            >
              <span
                className="rating-text"
              >
                6.1
              </span>
            </div>
          </div>
          <p
            className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-1slfw7x-MuiTypography-root"
          >
            <span
              className="genre"
            >
              Drama, Romance
            </span>
          </p>
          <p
            className="MuiTypography-root MuiTypography-body2 css-eift69-MuiTypography-root"
          >
            <span
              className="date-rotate"
            >
              2018-02-07
                 
            </span>
            <span
              className="date-rotate"
            >
                 2h 36m
            </span>
          </p>
          <p
            className="MuiTypography-root MuiTypography-body2 css-1m85slh-MuiTypography-root"
          >
            <span
              className="description"
            >
              Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins.
            </span>
          </p>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          className="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          <button
            aria-label="search"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pdw4tk-MuiSvgIcon-root"
              data-testid="SearchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
            <span
              className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`With React Testing Library renders correctly without movie 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-q3edm8-MuiPaper-root"
>
  <span
    className="logo-text"
  >
    netflixroulette
  </span>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <button
        className="MuiButtonBase-root css-14rlyms-MuiButtonBase-root"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <img
          alt="complex"
          className="movie-img"
        />
      </button>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-undefined MuiGrid-grid-xs-12 MuiGrid-grid-sm-true css-19gf1bx-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column MuiGrid-grid-xs-true css-1x3r9m2-MuiGrid-root"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-13recvd-MuiGrid-root"
        >
          <div
            style={
              Object {
                "display": "inline-flex",
                "marginLeft": 40,
              }
            }
          >
            <span
              className="movie-info-header"
            />
            <div
              className="movie-info-rating"
            >
              <span
                className="rating-text"
              />
            </div>
          </div>
          <p
            className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-1slfw7x-MuiTypography-root"
          >
            <span
              className="genre"
            />
          </p>
          <p
            className="MuiTypography-root MuiTypography-body2 css-eift69-MuiTypography-root"
          >
            <span
              className="date-rotate"
            >
                 
            </span>
            <span
              className="date-rotate"
            >
                 2h 36m
            </span>
          </p>
          <p
            className="MuiTypography-root MuiTypography-body2 css-1m85slh-MuiTypography-root"
          >
            <span
              className="description"
            />
          </p>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          className="MuiTypography-root MuiTypography-subtitle1 css-10wpov9-MuiTypography-root"
        >
          <button
            aria-label="search"
            className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onContextMenu={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1pdw4tk-MuiSvgIcon-root"
              data-testid="SearchIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
